-n Fix off center title on the home page. Fix #784

--- a/mixins/mobile-mixins.scss
+++ b/mixins/mobile-mixins.scss
@@ -5,6 +5,8 @@ $not-mobile: "(min-width: 768px)";
 $small-screen: "(max-width: 980px)";
 $medium-screen: "(max-width: 1400px)";
 
+$ipad-screen: "(max-width: 980px) and (min-width: 400px)";
+
 @mixin breakpoint($querystring) {
   $valid: true;
   @if type-of($querystring) != "string" {
